[ex 6] fixed bug that didn't showed posts from users because a whitespace in the form

--- a/style.css
+++ b/style.css
@@ -18,3 +18,8 @@ a {
     text-decoration: none;
     color: black;
 }
+
+a:hover{
+    text-decoration: none;
+    color: blue;
+}
